# routecam

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  THIRD-PARTY-NOTICES.md
.github/workflows/: build.yml
assets/: compose_nv12_to_cbcr.slang  compose_nv12_to_y.slang  compose_rgb_to_cbcr.slang  compose_rgb_to_y.slang  imgui.slang  max2_eac_view.slang  nv12_to_rgb.slang
slang_cache/: _slash_imgui-a8f7b326fa04c778-0.ssc  _slash_imgui-a8f7b326fa04c778-0.ssc-meta  imgui.spv-batch
src/: gps_timeline.cpp  gps_timeline.h  hud_draw.cpp  hud_draw.h  main.cpp  max2_eac_view.cpp  max2_eac_view.h  minimap.cpp  minimap.h  osm_minimap.cpp  osm_minimap.h  osm_tile_cache.cpp  osm_tile_cache.h  routecam_frame.cpp  routecam_frame.h  slippy_map.h  transcode_session.cpp  transcode_session.h
